[package]
name = "quarry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = { version = "0.8.5", default-features = false, features = ["serde-codec", "std"] }
anyhow = "1.0.51"
multihash = { version = "0.16.1", default-features = false, features = ["multihash-impl"] }
marble = "14.0.2"
serde = "1.0.145"
bincode = "1.3.3"

[dev-dependencies]
multihash = "0.16.1"
rand = "0.8.5"
criterion = { version = "0.3", features = ["async_futures", "async_std"] }
wiresaw = { path = "./wiresaw", version = "0.1.0", default_features = false }

[workspace]
members = [
  "wiresaw",
]

[[bench]]
name = "wiresaw"
harness = false
