[package]
name = "wiresaw"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.5", default-features = false, features = ["serde-codec", "std"] }
multihash = { version = "0.16.1", default-features = false, features = ["multihash-impl", "sha2"] }
anyhow = "1.0.51"
serde = "1.0.145"
serde_bytes = "0.11.7"
serde_ipld_dagcbor = "0.2.2"
rayon = "1.5.3"

[dev-dependencies]
rand = "0.8.5"
